Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -28,9 +28,10 @@
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
         <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a name="kapgel-%C4%B0%C5%9F-g%C3%B6nderme-ve-takip-sistemi-api-d%C3%B6k%C3%BCmantasyonu" class="anchor" href="#kapgel-%C4%B0%C5%9F-g%C3%B6nderme-ve-takip-sistemi-api-d%C3%B6k%C3%BCmantasyonu"><span class="octicon octicon-link"></span></a>Kapgel İş Gönderme ve Takip Sistemi API dökümantasyonu</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>Kapgel API, kullanıcıların HTTP üzerinden güvenli bir şekide kapgel sistemine programatik olarak erişmesini sağlar. Kapgel API
+hem son kullanıcıların yeni gönderi girmeleri için hem de girilmiş olan gönderilerin bir admin tarafından yönetimi için kullanılabilir. Bu sistemden beklenebilecek bazı özellikler şu anda eksik olsada nihai amacımız gönderi yapan bütün şirketlerin kapgel'i sistemlerine sorunsuz ve rahat bir sekilde entegre edebilmelerini sağlamaktır. Eğer bir sorunuz olursa ve ya eklenmesini istediğiniz bir özellik olursa lütfen bizimle irtibata geçin, isteklerinizi bir sonraki versiyonumuzda hayata geçirmeye çalışırız.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
