--- a/index.html
+++ b/index.html
@@ -34,6 +34,52 @@
 hem son kullanıcıların yeni gönderi girmeleri için hem de girilmiş olan gönderilerin bir admin tarafından yönetimi için kullanılabilir. Bu sistemden beklenebilecek bazı özellikler şu anda eksik olsada nihai amacımız gönderi yapan bütün şirketlerin kapgel'i sistemlerine sorunsuz ve rahat bir sekilde entegre edebilmelerini sağlamaktır. Eğer bir sorunuz olursa ve ya eklenmesini istediğiniz bir özellik olursa lütfen bizimle irtibata geçin, isteklerinizi bir sonraki versiyonumuzda hayata geçirmeye çalışırız.</p>
 
 <p>Kapgel API'ın son versiyonunun temel URL'i <a href="https://api.kapgel.com/1">https://api.kapgel.com/1</a> dir. HTTP istekleri bu URL'i kullanan adreslere gönderilecektir. Bu dökümantasyondaki diğer bütün adresler bu temel adresin ardına eklenmelidir.</p>
+
+<h3>
+<a name="job-olusturma" class="anchor" href="#job-olusturma"><span class="octicon octicon-link"></span></a>job olusturma:</h3>
+
+<p>POST /job
+header: {
+  kapgel-auth: 
+}
+body: {
+  subStore: 
+  desi: 
+  recipient: 
+  pickUp:  
+  dropOff:  
+  callbackURL: 
+}  </p>
+
+<h3>
+<a name="listeleme" class="anchor" href="#listeleme"><span class="octicon octicon-link"></span></a>listeleme</h3>
+
+<p>Bütün gönderilerin listesi için
+GET /job
+header: {
+  kapgel-auth: 
+  subStore: 
+}
+body: {}
+GET /job/:id
+header: {
+  kapgel-auth: 
+}
+response:
+{
+  subStore: 
+  desi: 
+  recipient: 
+  pickUp:  
+  dropOff:  
+  status: 
+  error: 
+}  </p>
+
+<h3>
+<a name="iptal-etme" class="anchor" href="#iptal-etme"><span class="octicon octicon-link"></span></a>iptal etme</h3>
+
+<p>POST /job/:id/cancel</p>
       </section>
     </div>
 
