Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@ header: {
 body: { 
   "subStore": "53b169b05b4856ab90e05d15",
   "desi": 3,
-  "recipient": {
+  "recipients": [{
     "name": "Mehmet Yilmaz",
     "phone": "05321234567",
     "notes": "Merdivenden cikinca 5. katta, zili calmayin"
-  },
+  }],
   "dropOff": [{
     "number": 21,
     "apartment": 10,
