Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body: {
       "street":"Çay Ocağı Sk",
       "city":"İstanbul",
       "country":"Türkiye",
-      "status":"invalid"
+      "status":"valid"
     }],
     "recipients":[{
       "name":"Mehmet Yilmaz",
