Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -78,10 +78,7 @@ body: {
   "dropOff": [{
     "number": 21,
     "apartment": 10,
-    "state": "Beykoz",
-    "street": "Çay Ocağı Sk",
-    "city": "İstanbul",
-    "country": "Türkiye"
+    "address": "Çay Ocağı Sk, Çubuklu Mh, Beykoz, İstanbul, Türkiye"
   }]
 }
 </code></pre>
