Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -97,21 +97,14 @@ body: {
   "branch": "53b169b05b4856ab90e05d15",
   "desi": 3,
   "sender": {
-    "name": "Adem Demir",
+    "fullName": "Adem Demir",
     "phone": "05053333333",
     "notes": "Adem Bey 12-1 arası ulaşılamayabilir"
   },
   "recipient": {
-    "name": "Mehmet Yilmaz",
+    "fullName": "Mehmet Yilmaz",
     "phone": "05321234567",
     "notes": "Merdivenden cikinca 5. katta, zili calmayin"
-  },
-  "from": {
-    "number": 12,
-    "apartment" : "Urban Station Galata",
-    "address": "Şahkulu Mh., Serdar-ı Ekrem Caddesi",
-    "county": "Beyoğlu",
-    "city": "İstanbul"
   },
   "to": {
     "number": 21,
