Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ body: {
 <h3>
 <a name="g%C3%B6nderi-olu%C5%9Fturma" class="anchor" href="#g%C3%B6nderi-olu%C5%9Fturma"><span class="octicon octicon-link"></span></a>Gönderi oluşturma:</h3>
 
-<pre><code>POST /delivery
+<pre><code>POST /delivery/new
 header: {
   Content-Type: application/json
   kapgel-auth: 0b833ef40-245c-11e4-8b24-05df52b6cb67
