--- a/index.html
+++ b/index.html
@@ -4,11 +4,9 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Kapgel.github.io : kapgel api docs">
-
+    <meta name="description" content="KapGel API Doc">
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-
-    <title>Kapgel.github.io</title>
+    <title>KapGel API Doc</title>
   </head>
 
   <body>
@@ -16,12 +14,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/kapgel">View on GitHub</a>
-
-          <h1 id="project_title">Kapgel.github.io</h1>
-          <h2 id="project_tagline">kapgel api docs</h2>
-
-        </header>
+          <h1 id="project_title">KapGel API Dökümanı</h1>
+          </header>
     </div>
 
     <!-- MAIN CONTENT -->
