--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="KapGel API Doc">
+    <meta name="description" content="Kapgel.github.io : kapgel api docs">
+
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
-    <title>KapGel API Doc</title>
+
+    <title>Kapgel.github.io</title>
   </head>
 
   <body>
@@ -14,8 +16,16 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <h1 id="project_title">KapGel API Dökümanı</h1>
-          </header>
+          <a id="forkme_banner" href="https://github.com/kapgel/doc.kapgel.com">View on GitHub</a>
+
+          <h1 id="project_title">Kapgel.github.io</h1>
+          <h2 id="project_tagline">kapgel api docs</h2>
+
+            <section id="downloads">
+              <a class="zip_download_link" href="https://github.com/kapgel/doc.kapgel.com/zipball/master">Download this project as a .zip file</a>
+              <a class="tar_download_link" href="https://github.com/kapgel/doc.kapgel.com/tarball/master">Download this project as a tar.gz file</a>
+            </section>
+        </header>
     </div>
 
     <!-- MAIN CONTENT -->
@@ -191,7 +201,11 @@ header: {
 
     <!-- FOOTER  -->
     <div id="footer_wrap" class="outer">
-     </div>
+      <footer class="inner">
+        <p class="copyright">Kapgel.github.io maintained by <a href="https://github.com/kapgel">kapgel</a></p>
+        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+      </footer>
+    </div>
 
     
 
