--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <meta name="description" content="Kapgel.github.io : kapgel api docs">
+    <meta name="description" content="doc.kapgel.com : kapgel api docs">
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
@@ -16,15 +16,8 @@
     <!-- HEADER -->
     <div id="header_wrap" class="outer">
         <header class="inner">
-          <a id="forkme_banner" href="https://github.com/kapgel/doc.kapgel.com">View on GitHub</a>
-
-          <h1 id="project_title">Kapgel.github.io</h1>
+          <h1 id="project_title">doc.kapgel.com</h1>
           <h2 id="project_tagline">kapgel api docs</h2>
-
-            <section id="downloads">
-              <a class="zip_download_link" href="https://github.com/kapgel/doc.kapgel.com/zipball/master">Download this project as a .zip file</a>
-              <a class="tar_download_link" href="https://github.com/kapgel/doc.kapgel.com/tarball/master">Download this project as a tar.gz file</a>
-            </section>
         </header>
     </div>
 
@@ -790,16 +783,5 @@ header: {
 </code></pre>
       </section>
     </div>
-
-    <!-- FOOTER  -->
-    <div id="footer_wrap" class="outer">
-      <footer class="inner">
-        <p class="copyright">Kapgel.github.io maintained by <a href="https://github.com/kapgel">kapgel</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
-      </footer>
-    </div>
-
-    
-
   </body>
 </html>
