--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ isteklerinizde bu anahtarı header'da <em>kapgel-auth:</em> olarak belirtmelisin
 <a name="branch-leri-listeleme" class="anchor" href="#branch-leri-listeleme"><span class="octicon octicon-link"></span></a>
 <em>Branch</em> leri listeleme</h2>
 
-<p>Kullanıcının <em>store</em> una bağlı olan bütün *branch*leri listeler:</p>
+<p>Kullanıcının <em>store</em> una bağlı olan bütün <em>Branch</em>leri listeler:</p>
 
 <pre><code>GET /branch
 header: {
